--- a/sequencer/software/CMakeLists.txt
+++ b/sequencer/software/CMakeLists.txt
@@ -39,10 +39,10 @@ set(DRUM_SEQUENCER_PATH ${PROJECT_SOURCE_DIR})
 pico_sdk_init()
 
 # Set up our executable/build stuff
-add_executable(sequencer sequencer.c)
+add_executable(sequencer sequencer.cpp)
 
 # Pull in dependencies
-target_link_libraries(sequencer pico_stdlib hardware_i2c)
+target_link_libraries(sequencer pico_stdlib hardware_i2c pico_malloc pico_mem_ops)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(sequencer)
