Make mutex names consistent

--- a/sequencer/software/CMakeLists.txt
+++ b/sequencer/software/CMakeLists.txt
@@ -69,6 +69,9 @@ target_link_libraries(${PROJECT_NAME}
   pico_mem_ops
   )
 
+# Uncomment to enable printf
+# pico_enable_stdio_usb(${PROJECT_NAME} 1)
+
 # create map/bin/hex file etc.
 pico_add_extra_outputs(${PROJECT_NAME})
 
